@@ -120,6 +120,33 @@ static void cancel_wait_sigq()
 static void do_shutdown_now()
 {
     WRMSG(HHC01420, "I");
+    {
+        char*   pszCurrIntervalStartDateTime;
+        char*   pszCurrentDateTime;
+        char    buf[128];
+        time_t  current_time;
+
+        current_time = time( NULL );
+
+        pszCurrIntervalStartDateTime = strdup( ctime( &curr_int_start_time ) );
+        pszCurrIntervalStartDateTime[strlen(pszCurrIntervalStartDateTime) - 1] = 0;
+        pszCurrentDateTime           = strdup( ctime(    &current_time     ) );
+        pszCurrentDateTime[strlen(pszCurrentDateTime) - 1] = 0;
+
+        WRMSG(HHC02272, "I", "Highest observed MIPS and IO/s rates");
+        MSGBUF( buf, "  from %s", pszCurrIntervalStartDateTime);
+        WRMSG(HHC02272, "I", buf);
+        MSGBUF( buf, "    to %s", pszCurrentDateTime);
+        WRMSG(HHC02272, "I", buf);
+        MSGBUF( buf, "  MIPS: %d.%02d  IO/s: %d", 
+                    curr_high_mips_rate / 1000000,
+                    curr_high_mips_rate % 1000000, 
+                    curr_high_sios_rate );
+        WRMSG(HHC02272, "I", buf);
+
+        free( pszCurrIntervalStartDateTime );
+        free( pszCurrentDateTime           );
+    }
 
     ASSERT( !sysblk.shutfini );  // (sanity check)
 
